--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_API_BASE_URL=https://jsonplaceholder.typicode.com
+VITE_DOCKER_BASE_URL=http://localhost:8765
+VITE_WEB_SOCKET_URL=http://62.72.31.234:30725
+VITE_PASSAGE_TYPE=controller_in # controller_in, controller_out, controller_evacuation
+VITE_IDLE_TIMEOUT=10000 # 10 secs
+VITE_HOST_APP_URL=http://185.144.158.11:3000/api-docs/
